[package]
name = "runic"
version = "1.0.0"
authors = ["Viktor Kuroljov <viktor@ku.family>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/viktor-ku/runic"
homepage = "https://github.com/viktor-ku/runic"
description = "Stupid string to duration converter"
keywords = [
    "time",
    "string",
    "format",
    "convert"
]
categories = [
    "parser-implementations",
    "parsing",
    "wasm"
]
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pest = "2.1"
pest_derive = "2.1"
wasm-bindgen = "0.2"
js-sys = "0.3"

[dependencies.chrono]
version = "0.4"
features = ["wasmbind"]

[dev-dependencies]
wasm-bindgen-test = "0.3"
pretty_assertions = "0.6"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]
