[package]
name = "runic"
version = "1.0.0"
authors = ["Viktor Kuroljov <viktor@ku.family>"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/viktor-ku/runic"
homepage = "https://github.com/viktor-ku/runic"
description = "Stupid string to duration converter"
keywords = [
    "time",
    "string",
    "format",
    "convert"
]
categories = [
    "parser-implementations",
    "parsing"
]
license = "MIT"

[dependencies]
pest = "2.1"
pest_derive = "2.1"

[dependencies.chrono]
version = "0.4"

[dev-dependencies]
pretty_assertions = "0.6"
